# pyetc_iredmuse

./: README.md  __init__.py  encoding.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
notebooks/: WST_LimMag.ipynb  iredmuse_LimMag.ipynb
pyetc/: __init__.py  etc.py  iredmuse.py  specalib.py
pyetc/Band_Filters/: R.txt  U.txt  V.txt
pyetc/data/iredmuse/: ifs_Jband_noatm.fits  ifs_zJband_noatm.fits
pyetc/data/wst/: moshr_yellow_noatm.fits  moslr_blue_noatm.fits
pyetc_ifs/: __init__.py  etc.py  iredmuse.py  specalib.py
pyetc_ifs/Band_Filters/: H.txt
pyetc_ifs/data/iredmuse/: ifs_zband_noatm.fits
pyetc_ifs/data/wst/: ifs_blue_noatm.fits  ifs_red_noatm.fits  moshr_red_noatm.fits
pyetc_iredmuse/: __init__.py  etc.py  iredmuse.py  specalib.py  wst.py
pyetc_iredmuse/Band_Filters/: B.txt  I.txt  J.txt  K.txt
pyetc_iredmuse/data/wst/: moshr_blue_noatm.fits  moshr_green_noatm.fits  moslr_green_noatm.fits  moslr_red_noatm.fits  moslr_yellow_noatm.fits
pyetc_wst/: WST_LimMag.ipynb  __init__.py  etc.py  specalib.py  wst.py
tests/: tests_iredmuse.py
