[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyetc"
dynamic = ["version"]
description = "Exposure Time Calculator for the iredMUSE instrument (VLT)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nicolas Bouché", email = "nicolas.bouche@cnrs.fr"},
    {name = "Matteo Ferro", email = "matteo.ferro@inaf.it"},
    {name = "Roland Bacon"}
]
keywords = ["astronomy", "spectroscopy", "exposure-time-calculator", "VLT"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "astropy>=5.0.0",
    "mpdaf>=3.5.0",
    "skycalc_cli",
]

[project.urls]
Homepage = "https://github.com/nfbouche/pyetc_iredmuse"
Repository = "https://github.com/nfbouche/pyetc_iredmuse"
Documentation = "https://github.com/nfbouche/pyetc_iredmuse#readme"
Issues = "https://github.com/nfbouche/pyetc_iredmuse/issues"

[tool.setuptools.dynamic]
version = {attr = "pyetc.__version__"}

[tool.setuptools]
packages = ["pyetc"]

[tool.setuptools.package-data]
pyetc = [
    "data/**/*",
    "Band_Filters/**/*.txt",
    "ESO_original_spectra/**/*",
]